--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1 class="winner-title">Jogador 1 ganhou!</h1>
+  <h1 class="winner-title">Resultado</h1>
 
   <section class="scoreboard">
     <span class="scoreboard-player-name">Jogador 1</span>
