--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   <section class="scoreboard">
     <span class="scoreboard-player-name">Jogador 1</span>
-    <strong class="score">01</strong>
+    <strong class="score score-player-1">00</strong>
     <span class="vs-small">VS</span>
-    <strong class="score">01</strong>
+    <strong class="score score-player-2">00</strong>
     <span class="scoreboard-player-name">Jogador 2</span>
   </section>
 
